--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,28 @@
-# Dependencies
-node_modules/
-/.pnp
-.pnp.js
-
-# Testing
-/coverage
-
-# Next.js
-/.next/
-/out/
-
-# Production
-/build
-
-# Misc
+# mac
 .DS_Store
-*.pem
 
-# Debug
+# env / secrets
+.env
+.env.*
+!.env.example
+
+# node
+node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
+.next
+dist
+build
+coverage
 
-# Local env files
-.env*.local
-.env
+# python
+.venv
+venv
+__pycache__/
+*.pyc
 
-# Vercel
-.vercel
-
-# TypeScript
-*.tsbuildinfo
-next-env.d.ts
+# misc
+.idea/
+.vscode/
