--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.93.1",
+    "cheerio": "^1.2.0",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "react": "^18.3.1",
